2001-06-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y,check.c: Bill contributed another table check
	and improved two other checks.

2001-05-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-python.c: Keith submitted a patch that turns
	(unordered) index element sets into (ordered) lists. However,
	it might cause other problems.
	
2001-05-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/Makefile.am: renamed parser-*.tab.c to parser-*.c. Harrie
	Hazewinkel reported problems with libtool some systems would
	have otherwise.

2001-04-24  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* config.sub, config.guess: Updated to recent versions from GNU CVS
	to get it working on PARISC. Thanks to LaMont Jones
	<lamont@smallone.fc.hp.com>.

2001-04-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-xml.c: Fixed DOCTYPE root identifier to contain
	no namespace prefix. Thanks to Andreas Goll.

2001-04-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.16.tar.gz: released version 0.2.16.

	* tools/smilint.c, smiquery.c: fixed obsolete use of the
	optind variable.

	* libsmi-0.2.15.tar.gz: released version 0.2.15.

	* tools/dump-stools.c: Update for stools >= 0.1.16.

2001-04-09  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Fixed RFC1155-SMI::Counter, Gauge, and
	TimeTicks ranges.

2001-03-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-jax.c: Fixed a bug on non not-accessible INDEX
	columns, reported by Joerg Mattes <joerg.mattes@nch.it>.

2001-03-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/check.c: Bill contributed more checks on group/compliance
	statements.

	* lib/check.c: Fixed core dump with recent type checks. Thanks
	to Bill.

2001-03-06  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.14.tar.gz: released version 0.2.14.

	* lib/check.c: Added more type usage checks.

2001-03-05  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
